--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,18 @@
 
 S3method(c,inzdoc)
 S3method(c,inzdocs)
+S3method(dispatch,inzcontrols)
+S3method(dispatch,inzdoc)
+S3method(dispatch,inzdocs)
 S3method(print,inzcontrols)
 S3method(print,inzdoc)
 S3method(print,inzdocs)
 S3method(print,inzstate)
+export(as_list)
 export(controls)
+export(dispatch)
 export(doc)
 export(docs)
+export(inzaction)
 export(inzight)
 export(inzstate)
