--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,6 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Imports: 
-    duckdb,
+Imports:
+    RSQLite,
     plumber
