--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,6 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports:
-    RSQLite,
-    plumber
+    iNZightTools,
+    plumber,
+    RSQLite
