--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,27 @@
 version: "3.9"
 services:
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: inzight
+      MONGO_INITDB_ROOT_PASSWORD: inzightvit
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: inzight
+      ME_CONFIG_MONGODB_ADMINPASSWORD: inzightvit
+      ME_CONFIG_MONGODB_URL: mongodb://inzight:inzightvit@mongo:27017/
+
   server:
     build: .
     ports:
       - "4567:4567"
+    environment:
+      INZIGHT_MONGODB_ADMINUSERNAME: inzight
+      INZIGHT_MONGODB_ADMINPASSWORD: inzightvit
+      INZIGHT_MONGODB_URL: mongodb://inzight:inzightvit@mongo:27017/
