Continue moving to environments; add preferences class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,21 +2,26 @@
 
 S3method(as_list,default)
 S3method(as_list,inzdoc)
+S3method(as_list,inzstate)
 S3method(c,inzdoc)
 S3method(c,inzdocs)
 S3method(dispatch,inzcontrols)
 S3method(dispatch,inzdoc)
 S3method(dispatch,inzdocs)
+S3method(dispatch,inzsettings)
 S3method(print,inzcontrols)
 S3method(print,inzdoc)
 S3method(print,inzdocs)
+S3method(print,inzsettings)
 S3method(print,inzstate)
 export(as_list)
-export(controls)
 export(dispatch)
 export(doc)
-export(docs)
 export(inzaction)
+export(inzcontrols)
+export(inzdocs)
 export(inzight)
+export(inzsettings)
+export(inzsettings_defaults)
 export(inzstate)
 export(viewDoc)
