--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,9 +16,9 @@ S3method(print,inzsettings)
 S3method(print,inzstate)
 export(as_list)
 export(dispatch)
-export(doc)
 export(inzaction)
 export(inzcontrols)
+export(inzdoc)
 export(inzdocs)
 export(inzight)
 export(inzsettings)
