--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,24 @@
 Package: inzight
-Title: What the Package Does (One Line, Title Case)
+Title: inzight State Management System
 Version: 0.0.0.9000
 Authors@R:
-    person(given = "First",
-           family = "Last",
+    person(given = "Tom",
+           family = "Elliott",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "tom.elliott@auckland.ac.nz",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: Provides back-end state management for a user interface.
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports:
+    cli,
+    glue,
     iNZightTools,
     plumber,
     mongolite
-Suggests: 
+Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
