remove old files; pass env vars

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ Imports:
     iNZightPlots,
     iNZightTools,
     plumber,
-    mongolite
+    tools
 Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
